<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button08"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button03" />

    <Button
        android:id="@+id/button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button01"
        app:layout_constraintBottom_toTopOf="@+id/button02"
        app:layout_constraintEnd_toStartOf="@+id/button05"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button02"
        app:layout_constraintBottom_toTopOf="@+id/button03"
        app:layout_constraintEnd_toStartOf="@+id/button06"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button01" />

    <Button
        android:id="@+id/button03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button03"
        app:layout_constraintBottom_toTopOf="@+id/button04"
        app:layout_constraintEnd_toStartOf="@+id/button07"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button02" />

    <Button
        android:id="@+id/button08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button08"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button04"
        app:layout_constraintTop_toBottomOf="@+id/button07" />

    <Button
        android:id="@+id/button05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button05"
        app:layout_constraintBottom_toTopOf="@+id/button06"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button01"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button06"
        app:layout_constraintBottom_toTopOf="@+id/button07"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button02"
        app:layout_constraintTop_toBottomOf="@+id/button05" />

    <Button
        android:id="@+id/button07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button07"
        app:layout_constraintBottom_toTopOf="@+id/button08"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button03"
        app:layout_constraintTop_toBottomOf="@+id/button06" />

</androidx.constraintlayout.widget.ConstraintLayout>